--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -44,8 +44,8 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "Tlačítko gesta myši",
-    "description": "Gesture mouse button"
+    "message": "Aktivační tlačítko",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "levé",
@@ -60,16 +60,16 @@
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
-    "message": "Časový limit gesta",
-    "description": "Gesture timeout"
+    "message": "Časový limit aktivace nečinnosti",
+    "description": "Activate idle timeout"
   },
   "settingLabelTimeoutDuration": {
     "message": "Trvání",
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Tlačítko k potlačení gest",
-    "description": "Gesture suppression key"
+    "message": "Deaktivační klávesa",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "Žádné",
@@ -92,12 +92,12 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "Minimální délka gesta",
-    "description": "Gesture distance threshold"
+    "message": "Práh vzdálenosti",
+    "description": "Distance threshold"
   },
-  "settingLabelDistanceSensitivity": {
-    "message": "Citlivost gesta",
-    "description": "Gesture sensitivity"
+  "settingLabelDeviationTolerance": {
+    "message": "Tolerance odchylky",
+    "description": "Deviation tolerance"
   },
   "settingLabelDisplayTrace": {
     "message": "Zobrazit stopu gesta",
@@ -106,10 +106,6 @@
   "settingLabelTraceColor": {
     "message": "Barva stopy",
     "description": "Line color"
-  },
-  "settingLabelTraceOpacity": {
-    "message": "Průhlednost",
-    "description": "Opacity"
   },
   "settingLabelTraceWidth": {
     "message": "Šířka stopy",
@@ -123,7 +119,7 @@
     "message": "Zobrazit příkaz",
     "description": "Display command"
   },
-  "settingLabelCommandColor": {
+  "settingLabelCommandFontColor": {
     "message": "Barva písma",
     "description": "Font color"
   },
@@ -131,57 +127,25 @@
     "message": "Barva pozadí",
     "description": "Background color"
   },
-  "settingLabelCommandBackgroundOpacity": {
-    "message": "Průhlednost pozadí",
-    "description": "Background opacity"
-  },
   "settingLabelCommandFontSize": {
     "message": "Velikost písma",
     "description": "Font size"
   },
-  "settingLabelDisplayDirections": {
-    "message": "Zobrazit směr gesta",
-    "description": "Display gesture directions"
+  "settingLabelCommandHorizontalPosition": {
+    "message": "Vodorovná pozice",
+    "description": "Horizontal position"
   },
-  "settingLabelDirectionsColor": {
-    "message": "Barva písma",
-    "description": "Font color"
-  },
-  "settingLabelDirectionsBackgroundColor": {
-    "message": "Barva pozadí",
-    "description": "Background color"
-  },
-  "settingLabelDirectionsBackgroundOpacity": {
-    "message": "Průhlednost pozadí",
-    "description": "Background opacity"
-  },
-  "settingLabelDirectionsFontSize": {
-    "message": "Velikost písma",
-    "description": "Font size"
-  },
-  "settingLabelDirectionsTextAlign": {
-    "message": "Zarovnání textu",
-    "description": "Text alignment"
-  },
-  "settingLabelDirectionsTextAlignLeft": {
-    "message": "vlevo",
-    "description": "left"
-  },
-  "settingLabelDirectionsTextAlignRight": {
-    "message": "vpravo",
-    "description": "right"
-  },
-  "settingLabelDirectionsTextAlignCenter": {
-    "message": "na střed",
-    "description": "center"
+  "settingLabelCommandVerticalPosition": {
+    "message": "Svislá pozice",
+    "description": "Vertical position"
   },
   "settingLabelUpdateNotification": {
     "message": "Zobrazit oznámení o aktualizaci",
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "Tlačítko myši, které spustí gesto.",
-    "description": "The mouse button which triggers the gesture."
+    "message": "Zachytí nové gesto myši při držení stisknutého tlačítka.",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "Zruší gesto, pokud nebyl po určenou dobu zaznamenán pohyb myši.",
@@ -192,24 +156,20 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Vypne gesta myši, pokud je zároveň stisknuta klávesa.",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "Zruší aktivní gesto nebo zabrání spuštění nového gesta, když je klávesa stisknuta.",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
     "message": "Minimální délka pohybu myši do aktivace gesta.",
-    "description": "The minimum mouse distance until the Gesture gets activated."
+    "description": "The minimum mouse movement until the gesture gets recognised."
   },
-  "settingDescriptionDistanceSensitivity": {
-    "message": "Minimální vzdálenost, kterou musí myš urazit, než je rozpoznán nový směr gesta. Toto ovlivní i plynulost stopy.",
-    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  "settingDescriptionDeviationTolerance": {
+    "message": "Přípustná odchylka gesta, která by měla být stále uznána jako shoda.",
+    "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
     "message": "Zobrazuje stopu pohybu myši.",
     "description": "Displays a trace along the mouse movement."
-  },
-  "settingDescriptionTraceOpacity": {
-    "message": "Můžete použít libovolnou hodnotu od 0 (neviditelná) do 1 (viditelná).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
     "message": "Určuje, zda má šířka stopy narůstat.",
@@ -219,37 +179,25 @@
     "message": "Je-li k dispozici, zobrazí odpovídající příkaz aktuálního gesta.",
     "description": "Displays the command of the currently matching gesture if available."
   },
-  "settingDescriptionCommandBackgroundOpacity": {
-    "message": "Můžete použít libovolnou hodnotu od 0 (neviditelné) do 1 (viditelné).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
-  },
   "settingDescriptionCommandFontSize": {
     "message": "Můžete použít libovolné CSS jednotky jako: em, px, pt, %, vh atd.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
-  "settingDescriptionDisplayDirections": {
-    "message": "Zobrazí zadaná gesta v podobě šipek na spodní části obrazovky.",
-    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
+  "settingDescriptionCommandHorizontalPosition": {
+    "message": "Vodorovná pozice na obrazovce od 0 (vlevo) do 100 (vpravo).",
+    "description": "Horizontal screen position from 0 (left) to 100 (right)."
   },
-  "settingDescriptionDirectionsFontSize": {
-    "message": "Můžete použít libovolné CSS jednotky jako: em, px, pt, %, vh atd.",
-    "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
-  },
-  "settingDescriptionDirectionsBackgroundOpacity": {
-    "message": "Můžete použít libovolnou hodnotu od 0 (neviditelné) do 1 (viditelné).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  "settingDescriptionCommandVerticalPosition": {
+    "message": "Vertikální pozice na obrazovce od 0 (nahoře) do 100 (dole).",
+    "description": "Vertical screen position from 0 (top) to 100 (bottom)."
   },
   "settingDescriptionUpdateNotification": {
     "message": "Zobrazí oznámení po aktualizaci Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
-  "gestureLabelInformation": {
-    "message": "Informace:",
-    "description": "Information:"
-  },
-  "gestureTextInformation": {
-    "message": "Gesto je posloupnost následujících směrů: ↑ [nahoru], ↓ [dolů], → [doprava], ← [doleva] a nesmí obsahovat stejný směr dvakrát v řadě, jako například ↑↑. Stejnému gestu nelze přiřadit více než jeden příkaz.",
-    "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
+  "gestureHintNoSearchResults": {
+    "message": "Nebyly nalezeny žádné výsledky",
+    "description": "No search results found"
   },
   "extraLabelRockerActive": {
     "message": "Houpací gesta",
@@ -311,6 +259,10 @@
     "message": "Zadejte šablonu pro URL",
     "description": "Enter URL match pattern"
   },
+  "blacklistAddButton": {
+    "message": "Přidat",
+    "description": "Add"
+  },
   "blacklistNotificationAlreadyExists": {
     "message": "Šablona URL adresy již existuje.",
     "description": "URL pattern already exists."
@@ -344,16 +296,12 @@
     "description": "Report a bug"
   },
   "aboutLinkCode": {
-    "message": "Zobrazit zdrojový kód",
-    "description": "View source code"
+    "message": "Zdrojový kód",
+    "description": "Source code"
   },
   "aboutLinkAddon": {
-    "message": "Zobrazit stránku doplňku",
-    "description": "View add-on page"
-  },
-  "aboutRestoreNotificationSuccess": {
-    "message": "Vybraná konfigurace byla úspěšně obnovena.",
-    "description": "The selected config has been successfully restored."
+    "message": "Stránka doplňku",
+    "description": "Add-on page"
   },
   "aboutRestoreNotificationNoConfigFile": {
     "message": "Vybraný soubor není platný konfigurační soubor Gesturefy.",
@@ -363,9 +311,13 @@
     "message": "Vybraný soubor neodpovídá požadovanému typu souboru.",
     "description": "The selected file does not match the required file type."
   },
-  "aboutResetNotificationAdditionalPermissions": {
-    "message": "Tento konfigurační soubor obsahuje gesta, která mohou vyžadovat přijetí dodatečných oprávnění.",
-    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  "aboutRestoreNotificationConfirm": {
+    "message": "Všechna nastavení včetně gest budou nahrazena vybraným konfiguračním souborem.",
+    "description": "All settings including gestures will be replaced by the selected config file."
+  },
+  "aboutRestoreNotificationSuccess": {
+    "message": "Vybraná konfigurace byla úspěšně obnovena.",
+    "description": "The selected config has been successfully restored."
   },
   "aboutResetNotificationConfirm": {
     "message": "Všechna nastavení včetně gest budou obnovena do výchozího stavu. Tato akce nelze vzít zpět!",
@@ -430,6 +382,10 @@
   "commandLabelToggleMute": {
     "message": "Vypnout/zapnout zvuk",
     "description": "Toggle mute"
+  },
+  "commandLabelToggleReaderMode": {
+    "message": "Přepnout režim čtení",
+    "description": "Toggle reader mode"
   },
   "commandLabelScrollTop": {
     "message": "Posunout na začátek",
@@ -671,6 +627,10 @@
     "message": "Spustit uživatelský skript",
     "description": "Execute user script"
   },
+  "commandLabelClearBrowsingData": {
+    "message": "Vymazat historii prohlížení",
+    "description": "Clear browsing data"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Přidá nebo odebere záložku.",
     "description": "Adds or removes a bookmark."
@@ -730,6 +690,10 @@
   "commandDescriptionToggleMute": {
     "message": "Vypne nebo zapne zvuk u aktuálního panelu.",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "Aktivuje nebo deaktivuje čtecí zobrazení, pokud je k dispozici.",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "Přejde na začátek stránky.",
@@ -971,6 +935,10 @@
     "message": "Spustí vlastní JavaScript kód na aktuální webové stránce.",
     "description": "Executes custom JavaScript code in the current webpage."
   },
+  "commandDescriptionClearBrowsingData": {
+    "message": "Odstraní vybraná data prohlížení.",
+    "description": "Removes the specified browsing data."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Umístění nového panelu",
     "description": "New tab position"
@@ -1115,25 +1083,69 @@
     "message": "Převést nové okno do popředí",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptWarning": {
+    "message": "Opatrně!",
+    "description": "Careful!"
+  },
   "commandSettingLabelUserScriptCode": {
     "message": "Kód uživatelského skriptu",
-    "description": "User Script Code"
+    "description": "User script code"
   },
   "commandSettingLabelTargetFrame": {
-    "message": "Target Frame",
-    "description": "Target Frame"
+    "message": "Cílový rám",
+    "description": "Target frame"
   },
   "commandSettingLabelTargetFrameSourceFrame": {
-    "message": "Source frame",
+    "message": "Zdrojový rám",
     "description": "Source frame"
   },
   "commandSettingLabelTargetFrameAllFrames": {
-    "message": "All frames",
+    "message": "Všechny rámy",
     "description": "All frames"
   },
   "commandSettingLabelTargetFrameTopFrame": {
-    "message": "Top-level frame",
+    "message": "Horní rám",
     "description": "Top-level frame"
+  },
+  "commandSettingLabelBrowsingDataCache": {
+    "message": "Mezipaměť",
+    "description": "Cache"
+  },
+  "commandSettingLabelBrowsingDataCookies": {
+    "message": "Cookies",
+    "description": "Cookies"
+  },
+  "commandSettingLabelBrowsingDataDownloads": {
+    "message": "Stažené položky",
+    "description": "Downloads"
+  },
+  "commandSettingLabelBrowsingDataFormData": {
+    "message": "Data formulářů",
+    "description": "Form data"
+  },
+  "commandSettingLabelBrowsingDataHistory": {
+    "message": "Historie",
+    "description": "History"
+  },
+  "commandSettingLabelBrowsingDataIndexedDB": {
+    "message": "IndexedDB",
+    "description": "IndexedDB"
+  },
+  "commandSettingLabelBrowsingDataLocalStorage": {
+    "message": "Lokální úložiště",
+    "description": "Local Storage"
+  },
+  "commandSettingLabelBrowsingDataPasswords": {
+    "message": "Hesla",
+    "description": "Passwords"
+  },
+  "commandSettingLabelBrowsingDataPluginData": {
+    "message": "Data pluginů",
+    "description": "Plugin data"
+  },
+  "commandSettingLabelBrowsingDataServiceWorkers": {
+    "message": "Service Workers",
+    "description": "Service Workers"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Určuje pozici nového panelu vůči aktuálnímu panelu.",
@@ -1223,12 +1235,16 @@
     "message": "Určuje, zda se má přepnout na nově otevřené okno, či nikoliv.",
     "description": "Determines if the opened window should gain focus or not."
   },
+  "commandSettingDescriptionUserScriptWarning": {
+    "message": "Uživatelské skripty mohou vést ke ztrátě soukromých dat.",
+    "description": "User scripts can lead to the loss of private data."
+  },
   "commandSettingDescriptionUserScriptCode": {
-    "message": "Be careful, the entire script code is executed in the webpage's scope!",
-    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+    "message": "Kód, který by měl být vložen do webové stránky.",
+    "description": "The code that should be injected into the webpage's scope."
   },
   "commandSettingDescriptionTargetFrame": {
-    "message": "The frame in which the user script should be injected.",
+    "message": "Rám, do kterého by měl být uživatelský skript vložen.",
     "description": "The frame in which the user script should be injected."
   },
   "commandErrorNotificationTitle": {
@@ -1253,6 +1269,10 @@
     "message": "Dané extension ID buď nepatří žádnému doplňku nebo doplněk nepřijímá zprávy. Pro více informací klikněte zde.",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
+  "commandErrorNotificationMessageMissingIncognitoPermissions": {
+    "message": "Gesturefy nemá oprávnění pro anonymní režim. Pro více informací klikněte zde.",
+    "description": "Gesturefy does not have permission for incognito mode. Click here for more information."
+  },
   "commandBarTitle": {
     "message": "Panel příkazů",
     "description": "Command bar"
@@ -1260,10 +1280,6 @@
   "commandBarSearch": {
     "message": "Hledat",
     "description": "Search"
-  },
-  "commandBarSaveButton": {
-    "message": "Uložit",
-    "description": "Save"
   },
   "commandBarRequiredPermissionsText": {
     "message": "Požadovaná oprávnění: ",
@@ -1323,15 +1339,11 @@
     "message": "Přiřaďte vlastní název, který bude zobrazen místo názvu příkazu.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "Uložit",
-    "description": "Save"
-  },
-  "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "Toto gesto je již použito u příkazu \"$COMMAND$\".",
-    "description": "This gesture is already in use by \"$COMMAND$\".",
+  "gesturePopupNotificationSimilarGesture": {
+    "message": "Toto gesto je podobné gestu \"$GESTURE_NAME$.",
+    "description": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
     "placeholders": {
-      "command": {
+      "gesture_name": {
         "content": "$1",
         "example": "New Tab"
       }
@@ -1340,6 +1352,10 @@
   "permissionLabelTabs": {
     "message": "Panely",
     "description": "Tabs"
+  },
+  "permissionLabelSessions": {
+    "message": "Relace",
+    "description": "Sessions"
   },
   "permissionLabelBookmarks": {
     "message": "Záložky",
@@ -1361,6 +1377,10 @@
     "message": "Hledat",
     "description": "Search"
   },
+  "permissionLabelBrowsingData": {
+    "message": "Data prohlížení",
+    "description": "Browsing data"
+  },
   "toggleButtonOn": {
     "message": "Ano",
     "description": "On - setting checked"
@@ -1369,9 +1389,21 @@
     "message": "Ne",
     "description": "Off - setting not checked"
   },
-  "LinkReadWiki": {
-    "message": "Pro více informací navštivte wikipedii.",
-    "description": "Read wiki for more info."
+  "linkAdditionalInformation": {
+    "message": "Další informace",
+    "description": "Additional information"
+  },
+  "buttonSave": {
+    "message": "Uložit",
+    "description": "Save"
+  },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "Zrušit",
+    "description": "Cancel"
   },
   "darkTheme": {
     "message": "Tmavý motiv",
