--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -44,8 +44,8 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "Pulsante mouse del gesto",
-    "description": "Gesture mouse button"
+    "message": "Pulsante di attivazione",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "sinistra",
@@ -60,16 +60,16 @@
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
-    "message": "Intervallo del gesto",
-    "description": "Gesture timeout"
+    "message": "Attiva timeout inattività",
+    "description": "Activate idle timeout"
   },
   "settingLabelTimeoutDuration": {
     "message": "Durata",
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Tasto di soppressione del gesto",
-    "description": "Gesture suppression key"
+    "message": "Chiave di disattivazione",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "Nessuno",
@@ -92,12 +92,12 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "Soglia della distanza del gesto",
-    "description": "Gesture distance threshold"
+    "message": "Soglia di distanza",
+    "description": "Distance threshold"
   },
-  "settingLabelDistanceSensitivity": {
-    "message": "Sensibilità del gesto",
-    "description": "Gesture sensitivity"
+  "settingLabelDeviationTolerance": {
+    "message": "Tolleranza deviazione",
+    "description": "Deviation tolerance"
   },
   "settingLabelDisplayTrace": {
     "message": "Visualizza traccia del gesto",
@@ -106,10 +106,6 @@
   "settingLabelTraceColor": {
     "message": "Colore linea",
     "description": "Line color"
-  },
-  "settingLabelTraceOpacity": {
-    "message": "Opacità",
-    "description": "Opacity"
   },
   "settingLabelTraceWidth": {
     "message": "Spessore linea",
@@ -123,7 +119,7 @@
     "message": "Comando del display",
     "description": "Display command"
   },
-  "settingLabelCommandColor": {
+  "settingLabelCommandFontColor": {
     "message": "Colore carattere",
     "description": "Font color"
   },
@@ -131,57 +127,25 @@
     "message": "Colore di sfondo",
     "description": "Background color"
   },
-  "settingLabelCommandBackgroundOpacity": {
-    "message": "Opacità sfondo",
-    "description": "Background opacity"
-  },
   "settingLabelCommandFontSize": {
     "message": "Dimensione carattere",
     "description": "Font size"
   },
-  "settingLabelDisplayDirections": {
-    "message": "Visualizza direzioni del gesto",
-    "description": "Display gesture directions"
+  "settingLabelCommandHorizontalPosition": {
+    "message": "Posizione orizzontale",
+    "description": "Horizontal position"
   },
-  "settingLabelDirectionsColor": {
-    "message": "Colore carattere",
-    "description": "Font color"
-  },
-  "settingLabelDirectionsBackgroundColor": {
-    "message": "Colore di sfondo",
-    "description": "Background color"
-  },
-  "settingLabelDirectionsBackgroundOpacity": {
-    "message": "Opacità sfondo",
-    "description": "Background opacity"
-  },
-  "settingLabelDirectionsFontSize": {
-    "message": "Dimensione carattere",
-    "description": "Font size"
-  },
-  "settingLabelDirectionsTextAlign": {
-    "message": "Allineamento del testo",
-    "description": "Text alignment"
-  },
-  "settingLabelDirectionsTextAlignLeft": {
-    "message": "sinistra",
-    "description": "left"
-  },
-  "settingLabelDirectionsTextAlignRight": {
-    "message": "destra",
-    "description": "right"
-  },
-  "settingLabelDirectionsTextAlignCenter": {
-    "message": "centro",
-    "description": "center"
+  "settingLabelCommandVerticalPosition": {
+    "message": "Posizione verticale",
+    "description": "Vertical position"
   },
   "settingLabelUpdateNotification": {
     "message": "Visualizza notifica di aggiornamento",
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "Pulsante del mouse che attiverà il gesto.",
-    "description": "The mouse button which triggers the gesture."
+    "message": "Cattura un nuovo gesto del mouse mentre il pulsante è tenuto premuto.",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "Annulla il gesto dopo che il mouse non è stato spostato per il tempo specificato.",
@@ -192,24 +156,20 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Disattiva il gesto del mouse se il tasto viene premuto.",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "Annulla il gesto attivo o impedisce che un nuovo gesto venga attivato mentre il tasto viene premuto.",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Distanza minima del mouse per l'attivazione del gesto.",
-    "description": "The minimum mouse distance until the Gesture gets activated."
+    "message": "Il movimento minimo del mouse finché il gesto non viene riconosciuto.",
+    "description": "The minimum mouse movement until the gesture gets recognised."
   },
-  "settingDescriptionDistanceSensitivity": {
-    "message": "Distanza minima del mouse per il riconoscimento del gesto. Questa influenzerà anche la fluidità della traccia.",
-    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  "settingDescriptionDeviationTolerance": {
+    "message": "La deviazione del gesto ammissibile che dovrebbe essere ancora riconosciuta come una corrispondenza.",
+    "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
     "message": "Visualizza una traccia lungo il movimento del mouse.",
     "description": "Displays a trace along the mouse movement."
-  },
-  "settingDescriptionTraceOpacity": {
-    "message": "Accetta qualsiasi valore nell'intervallo 0 (invisibile) e 1 (visibile).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
     "message": "Determina se lo spessore della linea deve crescere.",
@@ -219,37 +179,25 @@
     "message": "Se disponibile, viene visualizzato il comando del gesto attualmente corrispondente.",
     "description": "Displays the command of the currently matching gesture if available."
   },
-  "settingDescriptionCommandBackgroundOpacity": {
-    "message": "Accetta qualsiasi valore nell'intervallo 0 (invisibile) e 1 (visibile).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
-  },
   "settingDescriptionCommandFontSize": {
     "message": "Accetta ogni unità CSS come: em, px, pt, %, vh ecc.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
-  "settingDescriptionDisplayDirections": {
-    "message": "Visualizzare la codifica del gesto come frecce nella parte inferiore dello schermo.",
-    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
+  "settingDescriptionCommandHorizontalPosition": {
+    "message": "Posizione orizzontale dello schermo da 0 (sinistra) a 100 (destra).",
+    "description": "Horizontal screen position from 0 (left) to 100 (right)."
   },
-  "settingDescriptionDirectionsFontSize": {
-    "message": "Accetta ogni unità CSS come: em, px, pt, %, vh ecc.",
-    "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
-  },
-  "settingDescriptionDirectionsBackgroundOpacity": {
-    "message": "Accetta qualsiasi valore nell'intervallo 0 (invisibile) e 1 (visibile).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  "settingDescriptionCommandVerticalPosition": {
+    "message": "Posizione verticale dello schermo da 0 (in alto) a 100 (in basso).",
+    "description": "Vertical screen position from 0 (top) to 100 (bottom)."
   },
   "settingDescriptionUpdateNotification": {
     "message": "Visualizza una notifica quando viene aggiornato Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
-  "gestureLabelInformation": {
-    "message": "Informazioni:",
-    "description": "Information:"
-  },
-  "gestureTextInformation": {
-    "message": "Un gesto è una sequenza delle seguenti direzioni: ↑ ↓ [down], → [right], [up], ← [left] e non può contenere la stessa direzione due volte di fila, come ↑ ↑ ad esempio. Lo stesso gesto non può essere assegnato a più comandi.",
-    "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
+  "gestureHintNoSearchResults": {
+    "message": "Nessun risultato trovato",
+    "description": "No search results found"
   },
   "extraLabelRockerActive": {
     "message": "Gesto Rocker",
@@ -311,6 +259,10 @@
     "message": "Inserire modello simile di URL",
     "description": "Enter URL match pattern"
   },
+  "blacklistAddButton": {
+    "message": "Aggiungi",
+    "description": "Add"
+  },
   "blacklistNotificationAlreadyExists": {
     "message": "Modello simile di URL già esistente.",
     "description": "URL pattern already exists."
@@ -344,16 +296,12 @@
     "description": "Report a bug"
   },
   "aboutLinkCode": {
-    "message": "Visualizza il codice sorgente",
-    "description": "View source code"
+    "message": "Codice sorgente",
+    "description": "Source code"
   },
   "aboutLinkAddon": {
-    "message": "Visualizza la pagina dell'estensione",
-    "description": "View add-on page"
-  },
-  "aboutRestoreNotificationSuccess": {
-    "message": "La configurazione selezionata è stata ripristinata. con successo.",
-    "description": "The selected config has been successfully restored."
+    "message": "Pagina componente aggiuntivo",
+    "description": "Add-on page"
   },
   "aboutRestoreNotificationNoConfigFile": {
     "message": "Il file selezionato non è un valido file di configurazione di Gesturefy.",
@@ -363,9 +311,13 @@
     "message": "Il file selezionato non corrisponde al tipo di file richiesto.",
     "description": "The selected file does not match the required file type."
   },
-  "aboutResetNotificationAdditionalPermissions": {
-    "message": "Questo file di configurazione contiene gesti che potrebbero richiedere l'accettazione di ulteriori autorizzazioni.",
-    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  "aboutRestoreNotificationConfirm": {
+    "message": "Tutte le impostazioni, compresi i gesti, verranno sostituite dal file di configurazione selezionato.",
+    "description": "All settings including gestures will be replaced by the selected config file."
+  },
+  "aboutRestoreNotificationSuccess": {
+    "message": "La configurazione selezionata è stata ripristinata. con successo.",
+    "description": "The selected config has been successfully restored."
   },
   "aboutResetNotificationConfirm": {
     "message": "Verranno resettate tutte le impostazioni compresi i gesti. Questo non può essere annullato!",
@@ -430,6 +382,10 @@
   "commandLabelToggleMute": {
     "message": "Attiva/disattiva audio",
     "description": "Toggle mute"
+  },
+  "commandLabelToggleReaderMode": {
+    "message": "Attiva/Disattiva modalità lettura",
+    "description": "Toggle reader mode"
   },
   "commandLabelScrollTop": {
     "message": "Scorri in cima",
@@ -671,6 +627,10 @@
     "message": "Esegui script utente",
     "description": "Execute user script"
   },
+  "commandLabelClearBrowsingData": {
+    "message": "Cancella dati di navigazione",
+    "description": "Clear browsing data"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Aggiunge o rimuove un segnalibro.",
     "description": "Adds or removes a bookmark."
@@ -730,6 +690,10 @@
   "commandDescriptionToggleMute": {
     "message": "Disabilita o abilita audio nella scheda corrente.",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "Attiva o disattiva la modalità di lettura, se disponibile.",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "Scorre all'inizio della pagina.",
@@ -971,6 +935,10 @@
     "message": "Esegue codice JavaScript personalizzato nella pagina web corrente.",
     "description": "Executes custom JavaScript code in the current webpage."
   },
+  "commandDescriptionClearBrowsingData": {
+    "message": "Rimuove i dati di navigazione specificati.",
+    "description": "Removes the specified browsing data."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Nuova posizione scheda",
     "description": "New tab position"
@@ -1115,13 +1083,17 @@
     "message": "Focus nuova finestra",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptWarning": {
+    "message": "Attenzione!",
+    "description": "Careful!"
+  },
   "commandSettingLabelUserScriptCode": {
-    "message": "Codice Script utente",
-    "description": "User Script Code"
+    "message": "Codice user script",
+    "description": "User script code"
   },
   "commandSettingLabelTargetFrame": {
     "message": "Frame di destinazione",
-    "description": "Target Frame"
+    "description": "Target frame"
   },
   "commandSettingLabelTargetFrameSourceFrame": {
     "message": "Frame sorgente",
@@ -1134,6 +1106,46 @@
   "commandSettingLabelTargetFrameTopFrame": {
     "message": "Frame superiore",
     "description": "Top-level frame"
+  },
+  "commandSettingLabelBrowsingDataCache": {
+    "message": "Cache",
+    "description": "Cache"
+  },
+  "commandSettingLabelBrowsingDataCookies": {
+    "message": "Cookies",
+    "description": "Cookies"
+  },
+  "commandSettingLabelBrowsingDataDownloads": {
+    "message": "Downloads",
+    "description": "Downloads"
+  },
+  "commandSettingLabelBrowsingDataFormData": {
+    "message": "Dati del modulo",
+    "description": "Form data"
+  },
+  "commandSettingLabelBrowsingDataHistory": {
+    "message": "Cronologia",
+    "description": "History"
+  },
+  "commandSettingLabelBrowsingDataIndexedDB": {
+    "message": "IndexedDB",
+    "description": "IndexedDB"
+  },
+  "commandSettingLabelBrowsingDataLocalStorage": {
+    "message": "Archiviazione locale",
+    "description": "Local Storage"
+  },
+  "commandSettingLabelBrowsingDataPasswords": {
+    "message": "Password",
+    "description": "Passwords"
+  },
+  "commandSettingLabelBrowsingDataPluginData": {
+    "message": "Dati plugin",
+    "description": "Plugin data"
+  },
+  "commandSettingLabelBrowsingDataServiceWorkers": {
+    "message": "Service worker",
+    "description": "Service Workers"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Definisce la posizione della nuova scheda rispetto alla scheda corrente.",
@@ -1223,9 +1235,13 @@
     "message": "Determina se la finestra aperta deve ottenere il focus o no.",
     "description": "Determines if the opened window should gain focus or not."
   },
+  "commandSettingDescriptionUserScriptWarning": {
+    "message": "Gli script utente possono portare alla perdita di dati privati.",
+    "description": "User scripts can lead to the loss of private data."
+  },
   "commandSettingDescriptionUserScriptCode": {
-    "message": "Fai attenzione, l'intero codice script viene eseguito nell'ambito della pagina web!",
-    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+    "message": "Il codice che dovrebbe essere inserito nell'ambito della pagina web.",
+    "description": "The code that should be injected into the webpage's scope."
   },
   "commandSettingDescriptionTargetFrame": {
     "message": "Il frame in cui deve essere iniettato lo script utente.",
@@ -1253,6 +1269,10 @@
     "message": "L'ID estensione specificato non appartiene a un componente aggiuntivo esistente o il componente aggiuntivo non riceve messaggi. Clicca qui per maggiori informazioni.",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
+  "commandErrorNotificationMessageMissingIncognitoPermissions": {
+    "message": "Gesturefy non ha permessi per la modalità in incognito. Clicca qui per ulteriori informazioni.",
+    "description": "Gesturefy does not have permission for incognito mode. Click here for more information."
+  },
   "commandBarTitle": {
     "message": "Barra dei comandi",
     "description": "Command bar"
@@ -1260,10 +1280,6 @@
   "commandBarSearch": {
     "message": "Ricerca",
     "description": "Search"
-  },
-  "commandBarSaveButton": {
-    "message": "Salva",
-    "description": "Save"
   },
   "commandBarRequiredPermissionsText": {
     "message": "Autorizzazioni necessarie: ",
@@ -1323,15 +1339,11 @@
     "message": "Assegna un nome personalizzato che verrà visualizzato anziché il nome del comando.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "Salva",
-    "description": "Save"
-  },
-  "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "Questo gesto è già in uso da \"$COMMAND$\".",
-    "description": "This gesture is already in use by \"$COMMAND$\".",
+  "gesturePopupNotificationSimilarGesture": {
+    "message": "Questo gesto è simile a \"$GESTURE_NAME$\".",
+    "description": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
     "placeholders": {
-      "command": {
+      "gesture_name": {
         "content": "$1",
         "example": "New Tab"
       }
@@ -1340,6 +1352,10 @@
   "permissionLabelTabs": {
     "message": "Schede",
     "description": "Tabs"
+  },
+  "permissionLabelSessions": {
+    "message": "Sessioni",
+    "description": "Sessions"
   },
   "permissionLabelBookmarks": {
     "message": "Segnalibri",
@@ -1361,6 +1377,10 @@
     "message": "Ricerca",
     "description": "Search"
   },
+  "permissionLabelBrowsingData": {
+    "message": "Dati di navigazione",
+    "description": "Browsing data"
+  },
   "toggleButtonOn": {
     "message": "On",
     "description": "On - setting checked"
@@ -1369,9 +1389,21 @@
     "message": "Disattivato",
     "description": "Off - setting not checked"
   },
-  "LinkReadWiki": {
-    "message": "Leggi il wiki per maggiori informazioni.",
-    "description": "Read wiki for more info."
+  "linkAdditionalInformation": {
+    "message": "Informazioni aggiuntive",
+    "description": "Additional information"
+  },
+  "buttonSave": {
+    "message": "Salva",
+    "description": "Save"
+  },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "Annulla",
+    "description": "Cancel"
   },
   "darkTheme": {
     "message": "Tema Scuro",
