--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -44,8 +44,8 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "ジェスチャーに使用するマウスボタン",
-    "description": "Gesture mouse button"
+    "message": "実行ボタン",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "左",
@@ -60,16 +60,16 @@
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
-    "message": "ジェスチャーのタイムアウト",
-    "description": "Gesture timeout"
+    "message": "アイドルタイムアウトを有効にする",
+    "description": "Activate idle timeout"
   },
   "settingLabelTimeoutDuration": {
     "message": "継続時間",
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "ジェスチャー抑制キー",
-    "description": "Gesture suppression key"
+    "message": "無効化キー",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "なし",
@@ -92,12 +92,12 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "ジェスチャー移動距離のしきい値",
-    "description": "Gesture distance threshold"
+    "message": "移動距離のしきい値",
+    "description": "Distance threshold"
   },
-  "settingLabelDistanceSensitivity": {
-    "message": "ジェスチャーの感度",
-    "description": "Gesture sensitivity"
+  "settingLabelDeviationTolerance": {
+    "message": "ずれの許容値",
+    "description": "Deviation tolerance"
   },
   "settingLabelDisplayTrace": {
     "message": "ジェスチャーの軌跡を表示する",
@@ -106,10 +106,6 @@
   "settingLabelTraceColor": {
     "message": "線の色",
     "description": "Line color"
-  },
-  "settingLabelTraceOpacity": {
-    "message": "不透明度",
-    "description": "Opacity"
   },
   "settingLabelTraceWidth": {
     "message": "線の太さ",
@@ -123,7 +119,7 @@
     "message": "コマンドを表示する",
     "description": "Display command"
   },
-  "settingLabelCommandColor": {
+  "settingLabelCommandFontColor": {
     "message": "フォントの色",
     "description": "Font color"
   },
@@ -131,57 +127,25 @@
     "message": "背景の色",
     "description": "Background color"
   },
-  "settingLabelCommandBackgroundOpacity": {
-    "message": "背景の不透明度",
-    "description": "Background opacity"
-  },
   "settingLabelCommandFontSize": {
     "message": "フォントサイズ",
     "description": "Font size"
   },
-  "settingLabelDisplayDirections": {
-    "message": "ジェスチャーの方向を表示する",
-    "description": "Display gesture directions"
+  "settingLabelCommandHorizontalPosition": {
+    "message": "水平位置",
+    "description": "Horizontal position"
   },
-  "settingLabelDirectionsColor": {
-    "message": "フォントの色",
-    "description": "Font color"
-  },
-  "settingLabelDirectionsBackgroundColor": {
-    "message": "背景の色",
-    "description": "Background color"
-  },
-  "settingLabelDirectionsBackgroundOpacity": {
-    "message": "背景の不透明度",
-    "description": "Background opacity"
-  },
-  "settingLabelDirectionsFontSize": {
-    "message": "フォントサイズ",
-    "description": "Font size"
-  },
-  "settingLabelDirectionsTextAlign": {
-    "message": "テキストの配置",
-    "description": "Text alignment"
-  },
-  "settingLabelDirectionsTextAlignLeft": {
-    "message": "左",
-    "description": "left"
-  },
-  "settingLabelDirectionsTextAlignRight": {
-    "message": "右",
-    "description": "right"
-  },
-  "settingLabelDirectionsTextAlignCenter": {
-    "message": "中央",
-    "description": "center"
+  "settingLabelCommandVerticalPosition": {
+    "message": "垂直位置",
+    "description": "Vertical position"
   },
   "settingLabelUpdateNotification": {
     "message": "更新の通知を表示する",
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "このボタンでジェスチャーを実行します。",
-    "description": "The mouse button which triggers the gesture."
+    "message": "ボタンが押されている間、マウスジェスチャーの検出を行います。",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "指定した時間、マウスを動かさなかった場合は、ジェスチャーをキャンセルします。",
@@ -192,24 +156,20 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "キーが押されている場合はマウスジェスチャーを無効にします。",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "キーが押された場合、現在のジェスチャーをキャンセルします。また、キーが押されている間、ジェスチャーの実行を防ぎます。",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "ジェスチャーが有効になるまでの最小マウス移動距離です。",
-    "description": "The minimum mouse distance until the Gesture gets activated."
+    "message": "ジェスチャーが認識されるまでの最小マウス移動距離です。",
+    "description": "The minimum mouse movement until the gesture gets recognised."
   },
-  "settingDescriptionDistanceSensitivity": {
-    "message": "新しい方向が認識されるまでの最小マウス移動距離です。これは軌跡の滑らかさにも影響します。",
-    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  "settingDescriptionDeviationTolerance": {
+    "message": "一致していると認識される、ジェスチャーのずれの許容範囲です。",
+    "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
     "message": "マウスの動きに沿って軌跡を表示します。",
     "description": "Displays a trace along the mouse movement."
-  },
-  "settingDescriptionTraceOpacity": {
-    "message": "0 (透明) から 1 (不透明) までの任意の値が有効です。",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
     "message": "線の太さが伸長するかどうかを指定します。",
@@ -219,37 +179,25 @@
     "message": "現在のジェスチャーに一致するコマンドを表示します。",
     "description": "Displays the command of the currently matching gesture if available."
   },
-  "settingDescriptionCommandBackgroundOpacity": {
-    "message": "0 (透明) から 1 (不透明) までの任意の値が有効です。",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
-  },
   "settingDescriptionCommandFontSize": {
     "message": "em、px、pt、%、vh などの CSS の単位が有効です。",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
-  "settingDescriptionDisplayDirections": {
-    "message": "ジェスチャーの動作を画面の下部に矢印で表示します。",
-    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
+  "settingDescriptionCommandHorizontalPosition": {
+    "message": "表示される水平位置です (0 (左) ～ 100 (右))。",
+    "description": "Horizontal screen position from 0 (left) to 100 (right)."
   },
-  "settingDescriptionDirectionsFontSize": {
-    "message": "em、px、pt、%、vh などの CSS の単位が有効です。",
-    "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
-  },
-  "settingDescriptionDirectionsBackgroundOpacity": {
-    "message": "0 (透明) から 1 (不透明) までの任意の値が有効です。",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  "settingDescriptionCommandVerticalPosition": {
+    "message": "表示される垂直位置です (0 (上) ～ 100 (下))。",
+    "description": "Vertical screen position from 0 (top) to 100 (bottom)."
   },
   "settingDescriptionUpdateNotification": {
     "message": "Gesturefy が更新された際に通知を表示します。",
     "description": "Shows a notification when Gesturefy is updated."
   },
-  "gestureLabelInformation": {
-    "message": "インフォメーション:",
-    "description": "Information:"
-  },
-  "gestureTextInformation": {
-    "message": "↑ [上]、↓ [下]、← [左]、→ [右] の4方向へ順番に動かすことでジェスチャーになります。↑↑ のように同じ方向を2連続で含めることや、複数のコマンドに同一のジェスチャーを割り当てることはできません。",
-    "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
+  "gestureHintNoSearchResults": {
+    "message": "見つかりませんでした",
+    "description": "No search results found"
   },
   "extraLabelRockerActive": {
     "message": "ロッカージェスチャー",
@@ -311,6 +259,10 @@
     "message": "URL マッチパターンを入力",
     "description": "Enter URL match pattern"
   },
+  "blacklistAddButton": {
+    "message": "追加",
+    "description": "Add"
+  },
   "blacklistNotificationAlreadyExists": {
     "message": "URL パターンはすでに存在します。",
     "description": "URL pattern already exists."
@@ -344,16 +296,12 @@
     "description": "Report a bug"
   },
   "aboutLinkCode": {
-    "message": "ソースコードを表示",
-    "description": "View source code"
+    "message": "ソースコード",
+    "description": "Source code"
   },
   "aboutLinkAddon": {
-    "message": "アドオンページを表示",
-    "description": "View add-on page"
-  },
-  "aboutRestoreNotificationSuccess": {
-    "message": "選択された設定の復元に成功しました。",
-    "description": "The selected config has been successfully restored."
+    "message": "アドオンのページ",
+    "description": "Add-on page"
   },
   "aboutRestoreNotificationNoConfigFile": {
     "message": "選択されたファイルは、有効な Gesturefy 設定ファイルではありません。",
@@ -363,9 +311,13 @@
     "message": "選択されたファイルは、復元に必要なファイル形式ではありません。",
     "description": "The selected file does not match the required file type."
   },
-  "aboutResetNotificationAdditionalPermissions": {
-    "message": "この設定ファイルには追加の許可設定が必要なジェスチャーが含まれています。",
-    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  "aboutRestoreNotificationConfirm": {
+    "message": "選択した設定ファイルによって、ジェスチャーを含むすべての設定が置き換えられます。",
+    "description": "All settings including gestures will be replaced by the selected config file."
+  },
+  "aboutRestoreNotificationSuccess": {
+    "message": "選択された設定の復元に成功しました。",
+    "description": "The selected config has been successfully restored."
   },
   "aboutResetNotificationConfirm": {
     "message": "ジェスチャーを含むすべての設定をリセットします。この操作は元に戻すことができません。",
@@ -430,6 +382,10 @@
   "commandLabelToggleMute": {
     "message": "音声ミュートを切り替え",
     "description": "Toggle mute"
+  },
+  "commandLabelToggleReaderMode": {
+    "message": "リーダーモードを切り替え",
+    "description": "Toggle reader mode"
   },
   "commandLabelScrollTop": {
     "message": "上までスクロール",
@@ -671,6 +627,10 @@
     "message": "ユーザースクリプトを実行",
     "description": "Execute user script"
   },
+  "commandLabelClearBrowsingData": {
+    "message": "ブラウジングデータを消去",
+    "description": "Clear browsing data"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "ブックマークの追加またはその削除を行います。",
     "description": "Adds or removes a bookmark."
@@ -730,6 +690,10 @@
   "commandDescriptionToggleMute": {
     "message": "現在のタブをミュートまたはミュートを解除します。",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "リーダービューを有効または無効にします (利用可能な場合)。",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "ページの一番上へスクロールします。",
@@ -971,6 +935,10 @@
     "message": "現在のウェブページで、カスタムした JavaScript コードを実行します。",
     "description": "Executes custom JavaScript code in the current webpage."
   },
+  "commandDescriptionClearBrowsingData": {
+    "message": "指定したブラウジングデータを削除します。",
+    "description": "Removes the specified browsing data."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "新しいタブの位置",
     "description": "New tab position"
@@ -1115,13 +1083,17 @@
     "message": "新しいウィンドウにフォーカス",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptWarning": {
+    "message": "注意!",
+    "description": "Careful!"
+  },
   "commandSettingLabelUserScriptCode": {
     "message": "ユーザースクリプトコード",
-    "description": "User Script Code"
+    "description": "User script code"
   },
   "commandSettingLabelTargetFrame": {
     "message": "ターゲットフレーム",
-    "description": "Target Frame"
+    "description": "Target frame"
   },
   "commandSettingLabelTargetFrameSourceFrame": {
     "message": "ソースフレーム",
@@ -1134,6 +1106,46 @@
   "commandSettingLabelTargetFrameTopFrame": {
     "message": "トップレベルフレーム",
     "description": "Top-level frame"
+  },
+  "commandSettingLabelBrowsingDataCache": {
+    "message": "キャッシュ",
+    "description": "Cache"
+  },
+  "commandSettingLabelBrowsingDataCookies": {
+    "message": "Cookie",
+    "description": "Cookies"
+  },
+  "commandSettingLabelBrowsingDataDownloads": {
+    "message": "ダウンロードの履歴",
+    "description": "Downloads"
+  },
+  "commandSettingLabelBrowsingDataFormData": {
+    "message": "フォームの入力履歴",
+    "description": "Form data"
+  },
+  "commandSettingLabelBrowsingDataHistory": {
+    "message": "履歴",
+    "description": "History"
+  },
+  "commandSettingLabelBrowsingDataIndexedDB": {
+    "message": "IndexedDB",
+    "description": "IndexedDB"
+  },
+  "commandSettingLabelBrowsingDataLocalStorage": {
+    "message": "ローカルストレージ",
+    "description": "Local Storage"
+  },
+  "commandSettingLabelBrowsingDataPasswords": {
+    "message": "パスワード",
+    "description": "Passwords"
+  },
+  "commandSettingLabelBrowsingDataPluginData": {
+    "message": "プラグインデータ",
+    "description": "Plugin data"
+  },
+  "commandSettingLabelBrowsingDataServiceWorkers": {
+    "message": "Service Worker",
+    "description": "Service Workers"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "現在のタブを基準にした新しいタブの位置を指定します。",
@@ -1160,11 +1172,11 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "一度に拡大/縮小される倍率(%)を指定します。空白の場合はデフォルトのズームレベルが使用されます。",
+    "message": "一度に拡大/縮小される倍率 (%) を指定します。空白の場合はデフォルトのズームレベルが使用されます。",
     "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
-    "message": "スクロールアニメーションにかかる時間(ミリ秒)です。",
+    "message": "スクロールアニメーションにかかる時間 (ミリ秒) です。",
     "description": "The duration in milliseconds the scroll animation should take."
   },
   "commandSettingDescriptionFocusIncludePinned": {
@@ -1223,9 +1235,13 @@
     "message": "開いたウィンドウがフォーカスされるかどうかを指定します。",
     "description": "Determines if the opened window should gain focus or not."
   },
+  "commandSettingDescriptionUserScriptWarning": {
+    "message": "ユーザースクリプトは個人データ損失の原因になる可能性があります。",
+    "description": "User scripts can lead to the loss of private data."
+  },
   "commandSettingDescriptionUserScriptCode": {
-    "message": "スクリプトコード全体がウェブページのスコープ内で実行される点にご注意ください。",
-    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+    "message": "コードはウェブページのスコープ内に挿入されます。",
+    "description": "The code that should be injected into the webpage's scope."
   },
   "commandSettingDescriptionTargetFrame": {
     "message": "ユーザースクリプトを差し込むフレームです。",
@@ -1253,6 +1269,10 @@
     "message": "指定した extension ID が既存のアドオンのものではない、またはアドオンがメッセージを受け取っていません。詳細はここをクリックしてください。",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
+  "commandErrorNotificationMessageMissingIncognitoPermissions": {
+    "message": "Gesturefy にプライベートモードの権限がありません。詳細はここをクリックしてください。",
+    "description": "Gesturefy does not have permission for incognito mode. Click here for more information."
+  },
   "commandBarTitle": {
     "message": "コマンドバー",
     "description": "Command bar"
@@ -1260,10 +1280,6 @@
   "commandBarSearch": {
     "message": "検索",
     "description": "Search"
-  },
-  "commandBarSaveButton": {
-    "message": "保存",
-    "description": "Save"
   },
   "commandBarRequiredPermissionsText": {
     "message": "必要な許可: ",
@@ -1323,15 +1339,11 @@
     "message": "コマンド名の代わりに表示される任意の名前を割り当てます。",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "保存",
-    "description": "Save"
-  },
-  "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "このジェスチャーはすでに \"$COMMAND$\" で使用しています。",
-    "description": "This gesture is already in use by \"$COMMAND$\".",
+  "gesturePopupNotificationSimilarGesture": {
+    "message": "このジェスチャーは \"$GESTURE_NAME$\" のジェスチャーに似ています。",
+    "description": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
     "placeholders": {
-      "command": {
+      "gesture_name": {
         "content": "$1",
         "example": "New Tab"
       }
@@ -1340,6 +1352,10 @@
   "permissionLabelTabs": {
     "message": "タブ",
     "description": "Tabs"
+  },
+  "permissionLabelSessions": {
+    "message": "セッション",
+    "description": "Sessions"
   },
   "permissionLabelBookmarks": {
     "message": "ブックマーク",
@@ -1361,6 +1377,10 @@
     "message": "検索",
     "description": "Search"
   },
+  "permissionLabelBrowsingData": {
+    "message": "ブラウジングデータ",
+    "description": "Browsing data"
+  },
   "toggleButtonOn": {
     "message": "On",
     "description": "On - setting checked"
@@ -1369,9 +1389,21 @@
     "message": "Off",
     "description": "Off - setting not checked"
   },
-  "LinkReadWiki": {
-    "message": "詳細は Wiki をご覧ください。",
-    "description": "Read wiki for more info."
+  "linkAdditionalInformation": {
+    "message": "その他の情報",
+    "description": "Additional information"
+  },
+  "buttonSave": {
+    "message": "保存",
+    "description": "Save"
+  },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "キャンセル",
+    "description": "Cancel"
   },
   "darkTheme": {
     "message": "暗いテーマ",
