--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -44,8 +44,8 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "Tlačidlo gesta myši",
-    "description": "Gesture mouse button"
+    "message": "Aktivačné tlačidlo",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "Ľavé",
@@ -61,15 +61,15 @@
   },
   "settingLabelTimeoutActive": {
     "message": "Časový limit gesta",
-    "description": "Gesture timeout"
+    "description": "Activate idle timeout"
   },
   "settingLabelTimeoutDuration": {
     "message": "Trvanie",
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Tlačidlo k pozastaveniu gest",
-    "description": "Gesture suppression key"
+    "message": "Deaktivačný kľúč",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "Žiadne",
@@ -92,12 +92,12 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "Prahová vzdialenosť gesta",
-    "description": "Gesture distance threshold"
+    "message": "Prahová vzdialenosť",
+    "description": "Distance threshold"
   },
-  "settingLabelDistanceSensitivity": {
-    "message": "Citlivosť gesta",
-    "description": "Gesture sensitivity"
+  "settingLabelDeviationTolerance": {
+    "message": "Tolerancia odchýlky",
+    "description": "Deviation tolerance"
   },
   "settingLabelDisplayTrace": {
     "message": "Zobraziť stopu gesta",
@@ -106,10 +106,6 @@
   "settingLabelTraceColor": {
     "message": "Farba čiary",
     "description": "Line color"
-  },
-  "settingLabelTraceOpacity": {
-    "message": "Priehľadnosť",
-    "description": "Opacity"
   },
   "settingLabelTraceWidth": {
     "message": "Šírka stopy",
@@ -123,65 +119,33 @@
     "message": "Zobrazenie názvu príkazu",
     "description": "Display command"
   },
-  "settingLabelCommandColor": {
-    "message": "Farba textu",
+  "settingLabelCommandFontColor": {
+    "message": "Farba písma",
     "description": "Font color"
   },
   "settingLabelCommandBackgroundColor": {
     "message": "Farba pozadia",
     "description": "Background color"
   },
-  "settingLabelCommandBackgroundOpacity": {
-    "message": "Priehľadnosť pozadia",
-    "description": "Background opacity"
-  },
   "settingLabelCommandFontSize": {
     "message": "Veľkosť textu",
     "description": "Font size"
   },
-  "settingLabelDisplayDirections": {
-    "message": "Zobraziť smer gesta",
-    "description": "Display gesture directions"
+  "settingLabelCommandHorizontalPosition": {
+    "message": "Horizontálne umiestnenie",
+    "description": "Horizontal position"
   },
-  "settingLabelDirectionsColor": {
-    "message": "Farba textu",
-    "description": "Font color"
-  },
-  "settingLabelDirectionsBackgroundColor": {
-    "message": "Farba pozadia",
-    "description": "Background color"
-  },
-  "settingLabelDirectionsBackgroundOpacity": {
-    "message": "Priehľadnosť pozadia",
-    "description": "Background opacity"
-  },
-  "settingLabelDirectionsFontSize": {
-    "message": "Veľkosť textu",
-    "description": "Font size"
-  },
-  "settingLabelDirectionsTextAlign": {
-    "message": "Zarovnanie textu",
-    "description": "Text alignment"
-  },
-  "settingLabelDirectionsTextAlignLeft": {
-    "message": "Vľavo",
-    "description": "left"
-  },
-  "settingLabelDirectionsTextAlignRight": {
-    "message": "Vpravo",
-    "description": "right"
-  },
-  "settingLabelDirectionsTextAlignCenter": {
-    "message": "Vycentrovať",
-    "description": "center"
+  "settingLabelCommandVerticalPosition": {
+    "message": "Vertikálne umiestnenie",
+    "description": "Vertical position"
   },
   "settingLabelUpdateNotification": {
     "message": "Zobraziť oznámenie o aktualizácii",
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "Tlačidlo myši, ktoré spúšťa gesto.",
-    "description": "The mouse button which triggers the gesture."
+    "message": "Pokým je stlačené tlačidlo, tak zachytí nové gesto myši.",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "Gesto sa zruší, ak nebol zaregistrovaný žiadny ďalší pohyb myšou počas určenej doby.",
@@ -192,24 +156,20 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Zakázať gesto myši po stlačení tlačidla.",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "Zruší aktivované gesto alebo zabráni spusteniu nového gesta pokým je klávesa stlačená.",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Minimálna vzdialenosť, ktorú musíte prejsť myšou, aby sa aktivovalo gesto.",
-    "description": "The minimum mouse distance until the Gesture gets activated."
+    "message": "Minimálna vzdialenosť, ktorú musíte prejsť myšou, aby bolo gesto rozoznané.",
+    "description": "The minimum mouse movement until the gesture gets recognised."
   },
-  "settingDescriptionDistanceSensitivity": {
-    "message": "Minimálna vzdialenosť, ktorú musíte prejsť pre rozpoznanie nového smeru. Tiež to bude mať vplyv na plynulosť stopy.",
-    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  "settingDescriptionDeviationTolerance": {
+    "message": "The permissible gesture deviation that should still be recognized as a match.",
+    "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
     "message": "Zobrazuje stopu pozdĺž pohybu myši.",
     "description": "Displays a trace along the mouse movement."
-  },
-  "settingDescriptionTraceOpacity": {
-    "message": "Prijať akúkoľvek hodnotu v rozsahu od 0 (neviditeľný) a 1 (viditeľný).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
     "message": "Určuje, či by mala rásť hrúbka čiary.",
@@ -219,37 +179,25 @@
     "message": "Zobrazí názov aktuálneho gesta, ak je k dispozícii.",
     "description": "Displays the command of the currently matching gesture if available."
   },
-  "settingDescriptionCommandBackgroundOpacity": {
-    "message": "Prijíma akúkoľvek hodnotu v rozsahu od 0 (neviditeľný) a 1 (viditeľný).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
-  },
   "settingDescriptionCommandFontSize": {
     "message": "Povolené sú všetky CSS jednotky ako napríklad: em, px, pt, %, vh atď.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
-  "settingDescriptionDisplayDirections": {
-    "message": "Zobrazí smery gesta ako šípky na spodnej strane obrazovky.",
-    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
+  "settingDescriptionCommandHorizontalPosition": {
+    "message": "Horizontal screen position from 0 (left) to 100 (right).",
+    "description": "Horizontal screen position from 0 (left) to 100 (right)."
   },
-  "settingDescriptionDirectionsFontSize": {
-    "message": "Povolené sú všetky CSS jednotky ako napríklad: em, px, pt, %, vh atď.",
-    "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
-  },
-  "settingDescriptionDirectionsBackgroundOpacity": {
-    "message": "Prijíma akúkoľvek hodnotu v rozsahu od 0 (neviditeľný) a 1 (viditeľný).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  "settingDescriptionCommandVerticalPosition": {
+    "message": "Vertical screen position from 0 (top) to 100 (bottom).",
+    "description": "Vertical screen position from 0 (top) to 100 (bottom)."
   },
   "settingDescriptionUpdateNotification": {
     "message": "Zobrazí sa oznámenie o aktualizácii rozšírenia Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
-  "gestureLabelInformation": {
-    "message": "Informácia:",
-    "description": "Information:"
-  },
-  "gestureTextInformation": {
-    "message": "Gesto je možné zadať v týchto smeroch: ↑ [hore], ↓ [dole], → [vpravo], ← [vľavo] a nemôže obsahovať rovnaký smer dvakrát za sebou, ako napríklad ↑↑. Rovnaké gesto nemôže byť priradené viac ako jednému príkazu.",
-    "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
+  "gestureHintNoSearchResults": {
+    "message": "No search results found",
+    "description": "No search results found"
   },
   "extraLabelRockerActive": {
     "message": "Rocker gestá",
@@ -311,6 +259,10 @@
     "message": "Zadajte vzorovú URL adresu",
     "description": "Enter URL match pattern"
   },
+  "blacklistAddButton": {
+    "message": "Add",
+    "description": "Add"
+  },
   "blacklistNotificationAlreadyExists": {
     "message": "Vzorová URL adresa existuje.",
     "description": "URL pattern already exists."
@@ -344,16 +296,12 @@
     "description": "Report a bug"
   },
   "aboutLinkCode": {
-    "message": "Zobraziť zdrojový kód",
-    "description": "View source code"
+    "message": "Source code",
+    "description": "Source code"
   },
   "aboutLinkAddon": {
-    "message": "Zobraziť stránku doplnku",
-    "description": "View add-on page"
-  },
-  "aboutRestoreNotificationSuccess": {
-    "message": "Vybrané nastavenia boli úspešne obnovené.",
-    "description": "The selected config has been successfully restored."
+    "message": "Add-on page",
+    "description": "Add-on page"
   },
   "aboutRestoreNotificationNoConfigFile": {
     "message": "Vybraný súbor nie platný súbor nastavení rozšírenia Gesturefy.",
@@ -363,9 +311,13 @@
     "message": "Vybraný súbor nezodpovedá požadovanému typu súboru.",
     "description": "The selected file does not match the required file type."
   },
-  "aboutResetNotificationAdditionalPermissions": {
-    "message": "Tento konfiguračný súbor obsahuje gestá, ktoré môžu vyžadovať prijatie dodatočných povolení.",
-    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  "aboutRestoreNotificationConfirm": {
+    "message": "All settings including gestures will be replaced by the selected config file.",
+    "description": "All settings including gestures will be replaced by the selected config file."
+  },
+  "aboutRestoreNotificationSuccess": {
+    "message": "Vybrané nastavenia boli úspešne obnovené.",
+    "description": "The selected config has been successfully restored."
   },
   "aboutResetNotificationConfirm": {
     "message": "Všetky nastavenia vrátane gest budú odstránené. Táto akcia sa nedá vrátiť!",
@@ -430,6 +382,10 @@
   "commandLabelToggleMute": {
     "message": "Zapnúť/vypnúť zvuk",
     "description": "Toggle mute"
+  },
+  "commandLabelToggleReaderMode": {
+    "message": "Toggle reader mode",
+    "description": "Toggle reader mode"
   },
   "commandLabelScrollTop": {
     "message": "Posunúť sa na začiatok",
@@ -671,6 +627,10 @@
     "message": "Spustiť používateľský skript",
     "description": "Execute user script"
   },
+  "commandLabelClearBrowsingData": {
+    "message": "Clear browsing data",
+    "description": "Clear browsing data"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Pridá alebo odoberie záložku.",
     "description": "Adds or removes a bookmark."
@@ -730,6 +690,10 @@
   "commandDescriptionToggleMute": {
     "message": "Stlmí alebo zapne zvuk aktuálnej karty.",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "Activates or deactivates the reader view if available.",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "Presunie na začiatok stránky.",
@@ -971,6 +935,10 @@
     "message": "Spustí vlastný JavaScript kód na aktuálnej webovej stránke.",
     "description": "Executes custom JavaScript code in the current webpage."
   },
+  "commandDescriptionClearBrowsingData": {
+    "message": "Removes the specified browsing data.",
+    "description": "Removes the specified browsing data."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Pozícia novej karty",
     "description": "New tab position"
@@ -1115,25 +1083,69 @@
     "message": "Prejsť na nové okno",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptWarning": {
+    "message": "Careful!",
+    "description": "Careful!"
+  },
   "commandSettingLabelUserScriptCode": {
-    "message": "Kód používateľského skriptu",
-    "description": "User Script Code"
+    "message": "User script code",
+    "description": "User script code"
   },
   "commandSettingLabelTargetFrame": {
-    "message": "Target Frame",
-    "description": "Target Frame"
+    "message": "Target frame",
+    "description": "Target frame"
   },
   "commandSettingLabelTargetFrameSourceFrame": {
-    "message": "Source frame",
+    "message": "Zdrojový rámec",
     "description": "Source frame"
   },
   "commandSettingLabelTargetFrameAllFrames": {
-    "message": "All frames",
+    "message": "Všetky rámce",
     "description": "All frames"
   },
   "commandSettingLabelTargetFrameTopFrame": {
-    "message": "Top-level frame",
+    "message": "Rámec vyššej úrovne",
     "description": "Top-level frame"
+  },
+  "commandSettingLabelBrowsingDataCache": {
+    "message": "Cache",
+    "description": "Cache"
+  },
+  "commandSettingLabelBrowsingDataCookies": {
+    "message": "Cookies",
+    "description": "Cookies"
+  },
+  "commandSettingLabelBrowsingDataDownloads": {
+    "message": "Downloads",
+    "description": "Downloads"
+  },
+  "commandSettingLabelBrowsingDataFormData": {
+    "message": "Form data",
+    "description": "Form data"
+  },
+  "commandSettingLabelBrowsingDataHistory": {
+    "message": "History",
+    "description": "History"
+  },
+  "commandSettingLabelBrowsingDataIndexedDB": {
+    "message": "IndexedDB",
+    "description": "IndexedDB"
+  },
+  "commandSettingLabelBrowsingDataLocalStorage": {
+    "message": "Local Storage",
+    "description": "Local Storage"
+  },
+  "commandSettingLabelBrowsingDataPasswords": {
+    "message": "Passwords",
+    "description": "Passwords"
+  },
+  "commandSettingLabelBrowsingDataPluginData": {
+    "message": "Plugin data",
+    "description": "Plugin data"
+  },
+  "commandSettingLabelBrowsingDataServiceWorkers": {
+    "message": "Service Workers",
+    "description": "Service Workers"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Určuje umiestnenie novej karty na paneli vzhľadom k aktuálnej karte.",
@@ -1223,9 +1235,13 @@
     "message": "Určuje, či sa má prepnúť na otvorené okno alebo nie.",
     "description": "Determines if the opened window should gain focus or not."
   },
+  "commandSettingDescriptionUserScriptWarning": {
+    "message": "User scripts can lead to the loss of private data.",
+    "description": "User scripts can lead to the loss of private data."
+  },
   "commandSettingDescriptionUserScriptCode": {
-    "message": "Be careful, the entire script code is executed in the webpage's scope!",
-    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+    "message": "The code that should be injected into the webpage's scope.",
+    "description": "The code that should be injected into the webpage's scope."
   },
   "commandSettingDescriptionTargetFrame": {
     "message": "The frame in which the user script should be injected.",
@@ -1253,6 +1269,10 @@
     "message": "Zadané extension ID buď nepatrí žiadnemu existujúcemu doplnku alebo tento doplnok neprijíma správy. Pre viac informácií kliknite tu.",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
+  "commandErrorNotificationMessageMissingIncognitoPermissions": {
+    "message": "Gesturefy does not have permission for incognito mode. Click here for more information.",
+    "description": "Gesturefy does not have permission for incognito mode. Click here for more information."
+  },
   "commandBarTitle": {
     "message": "Panel príkazov",
     "description": "Command bar"
@@ -1260,10 +1280,6 @@
   "commandBarSearch": {
     "message": "Vyhľadať",
     "description": "Search"
-  },
-  "commandBarSaveButton": {
-    "message": "Uložiť",
-    "description": "Save"
   },
   "commandBarRequiredPermissionsText": {
     "message": "\nPožadované povolenia: ",
@@ -1323,15 +1339,11 @@
     "message": "Zadajte vlastný názov, ktorý bude zobrazený namiesto názvu príkazu.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "Uložiť",
-    "description": "Save"
-  },
-  "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "Toto gesto je už použité pre príkaz: $COMMAND$.",
-    "description": "This gesture is already in use by \"$COMMAND$\".",
+  "gesturePopupNotificationSimilarGesture": {
+    "message": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
+    "description": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
     "placeholders": {
-      "command": {
+      "gesture_name": {
         "content": "$1",
         "example": "New Tab"
       }
@@ -1340,6 +1352,10 @@
   "permissionLabelTabs": {
     "message": "Karty",
     "description": "Tabs"
+  },
+  "permissionLabelSessions": {
+    "message": "Sessions",
+    "description": "Sessions"
   },
   "permissionLabelBookmarks": {
     "message": "Záložky",
@@ -1361,6 +1377,10 @@
     "message": "Vyhľadávanie",
     "description": "Search"
   },
+  "permissionLabelBrowsingData": {
+    "message": "Browsing data",
+    "description": "Browsing data"
+  },
   "toggleButtonOn": {
     "message": "ZAP",
     "description": "On - setting checked"
@@ -1369,9 +1389,21 @@
     "message": "VYP",
     "description": "Off - setting not checked"
   },
-  "LinkReadWiki": {
-    "message": "Pre viac informácií čítajte wiki.",
-    "description": "Read wiki for more info."
+  "linkAdditionalInformation": {
+    "message": "Additional information",
+    "description": "Additional information"
+  },
+  "buttonSave": {
+    "message": "Save",
+    "description": "Save"
+  },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "Cancel",
+    "description": "Cancel"
   },
   "darkTheme": {
     "message": "Tmavá téma",
