--- a/src/_locales/sv_SE/messages.json
+++ b/src/_locales/sv_SE/messages.json
@@ -44,8 +44,8 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "Rörelsemusknapp",
-    "description": "Gesture mouse button"
+    "message": "Aktiveringsknapp",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "vänster",
@@ -60,16 +60,16 @@
     "description": "middle"
   },
   "settingLabelTimeoutActive": {
-    "message": "Rörelsetimeout",
-    "description": "Gesture timeout"
+    "message": "Aktivera vilopaus",
+    "description": "Activate idle timeout"
   },
   "settingLabelTimeoutDuration": {
     "message": "Varaktighet",
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Rörelseavbrytningstangent",
-    "description": "Gesture suppression key"
+    "message": "Inaktiveringsnyckel",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "Ingen",
@@ -92,12 +92,12 @@
     "description": "Advanced settings"
   },
   "settingLabelDistanceThreshold": {
-    "message": "Rörelseavståndströskel",
-    "description": "Gesture distance threshold"
+    "message": "Distanströskelvärde",
+    "description": "Distance threshold"
   },
-  "settingLabelDistanceSensitivity": {
-    "message": "Rörelsekänslighet",
-    "description": "Gesture sensitivity"
+  "settingLabelDeviationTolerance": {
+    "message": "Avvikelsetolerans",
+    "description": "Deviation tolerance"
   },
   "settingLabelDisplayTrace": {
     "message": "Visa rörelsespår",
@@ -106,10 +106,6 @@
   "settingLabelTraceColor": {
     "message": "Linjefärg",
     "description": "Line color"
-  },
-  "settingLabelTraceOpacity": {
-    "message": "Genomskinlighet",
-    "description": "Opacity"
   },
   "settingLabelTraceWidth": {
     "message": "Linjebredd",
@@ -123,7 +119,7 @@
     "message": "Visa kommando",
     "description": "Display command"
   },
-  "settingLabelCommandColor": {
+  "settingLabelCommandFontColor": {
     "message": "Typsnittsfärg",
     "description": "Font color"
   },
@@ -131,57 +127,25 @@
     "message": "Bakgrundsfärg",
     "description": "Background color"
   },
-  "settingLabelCommandBackgroundOpacity": {
-    "message": "Bakgrundsgenomskinlighet",
-    "description": "Background opacity"
-  },
   "settingLabelCommandFontSize": {
     "message": "Typsnittsstorlek",
     "description": "Font size"
   },
-  "settingLabelDisplayDirections": {
-    "message": "Visa rörelseriktning",
-    "description": "Display gesture directions"
+  "settingLabelCommandHorizontalPosition": {
+    "message": "Horisontellt läge",
+    "description": "Horizontal position"
   },
-  "settingLabelDirectionsColor": {
-    "message": "Typsnittsfärg",
-    "description": "Font color"
-  },
-  "settingLabelDirectionsBackgroundColor": {
-    "message": "Bakgrundsfärg",
-    "description": "Background color"
-  },
-  "settingLabelDirectionsBackgroundOpacity": {
-    "message": "Bakgrundsgenomskinlighet",
-    "description": "Background opacity"
-  },
-  "settingLabelDirectionsFontSize": {
-    "message": "Typsnittsstorlek",
-    "description": "Font size"
-  },
-  "settingLabelDirectionsTextAlign": {
-    "message": "Textjustering",
-    "description": "Text alignment"
-  },
-  "settingLabelDirectionsTextAlignLeft": {
-    "message": "vänster",
-    "description": "left"
-  },
-  "settingLabelDirectionsTextAlignRight": {
-    "message": "höger",
-    "description": "right"
-  },
-  "settingLabelDirectionsTextAlignCenter": {
-    "message": "centrerad",
-    "description": "center"
+  "settingLabelCommandVerticalPosition": {
+    "message": "Vertikal läge",
+    "description": "Vertical position"
   },
   "settingLabelUpdateNotification": {
     "message": "Visa uppdateringsavisering",
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "Musknappen som triggar rörelsen.",
-    "description": "The mouse button which triggers the gesture."
+    "message": "Captures a new mouse gesture while the button is held down.",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "Avbryter rörelsen efter att musen inte har blivit flyttad på den angivna tiden.",
@@ -192,24 +156,20 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Avbryter musrörelsen om tangenten trycks ner.",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed.",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Minsta mussträcka tills rörelsen aktiveras.",
-    "description": "The minimum mouse distance until the Gesture gets activated."
+    "message": "Minsta musrörelse tills rörelsen känns igen.",
+    "description": "The minimum mouse movement until the gesture gets recognised."
   },
-  "settingDescriptionDistanceSensitivity": {
-    "message": "Minsta mussträckan tills en ny riktning blir igenkänd. Detta kommer också att påverka spårets jämnhet.",
-    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  "settingDescriptionDeviationTolerance": {
+    "message": "Den tillåtna rörelseavvikelsen som fortfarande bör kännas igen som en match.",
+    "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
     "message": "Visar ett spår längs musens rörelse.",
     "description": "Displays a trace along the mouse movement."
-  },
-  "settingDescriptionTraceOpacity": {
-    "message": "Accepterar ett värde mellan 0 (osynligt) och 1 (synligt).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
     "message": "Bestämmer om spårbredden ska växa.",
@@ -219,37 +179,25 @@
     "message": "Visar det tillgängliga kommandot av den aktuella rörelsen.",
     "description": "Displays the command of the currently matching gesture if available."
   },
-  "settingDescriptionCommandBackgroundOpacity": {
-    "message": "Accepterar ett värde mellan 0 (osynligt) och 1 (synligt).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
-  },
   "settingDescriptionCommandFontSize": {
     "message": "Accepterar alla CSS-enhet som: em, px, pt, %, vh etc.",
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
-  "settingDescriptionDisplayDirections": {
-    "message": "Visar kodningen av rörelsen som pilar längst ner på skärmen.",
-    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
+  "settingDescriptionCommandHorizontalPosition": {
+    "message": "Horisontell skärmposition från 0 (vänster) till 100 (höger).",
+    "description": "Horizontal screen position from 0 (left) to 100 (right)."
   },
-  "settingDescriptionDirectionsFontSize": {
-    "message": "Accepterar alla CSS-enhet som: em, px, pt, %, vh etc.",
-    "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
-  },
-  "settingDescriptionDirectionsBackgroundOpacity": {
-    "message": "Accepterar ett värde mellan 0 (osynligt) och 1 (synligt).",
-    "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  "settingDescriptionCommandVerticalPosition": {
+    "message": "Vertikal skärmposition från 0 (överst) till 100 (nederst).",
+    "description": "Vertical screen position from 0 (top) to 100 (bottom)."
   },
   "settingDescriptionUpdateNotification": {
     "message": "Visar en avisering när Gesturefy har uppdaterats.",
     "description": "Shows a notification when Gesturefy is updated."
   },
-  "gestureLabelInformation": {
-    "message": "Information:",
-    "description": "Information:"
-  },
-  "gestureTextInformation": {
-    "message": "En rörelse är en sekvens av följande riktningar: ↑ [upp], ↓ [ner], → [höger], ← [vänster] och kan inte innehålla samma riktning två gånger i rad, som till exempel ↑↑. Samma rörelse kan inte tilldelas mer än ett kommando.",
-    "description": "A gesture is a sequence of the following directions: ↑ [up], ↓ [down], → [right], ← [left] and cannot contain the same direction twice in a row, as for example ↑↑. The same gesture can not be assigned to more than one command."
+  "gestureHintNoSearchResults": {
+    "message": "Inga sökresultat hittades",
+    "description": "No search results found"
   },
   "extraLabelRockerActive": {
     "message": "Musknappsrörelse",
@@ -311,6 +259,10 @@
     "message": "Ange webbadressmönster",
     "description": "Enter URL match pattern"
   },
+  "blacklistAddButton": {
+    "message": "Lägg till",
+    "description": "Add"
+  },
   "blacklistNotificationAlreadyExists": {
     "message": "Webbadressmönstret finns redan.",
     "description": "URL pattern already exists."
@@ -344,16 +296,12 @@
     "description": "Report a bug"
   },
   "aboutLinkCode": {
-    "message": "Visa källkoden",
-    "description": "View source code"
+    "message": "Källkod",
+    "description": "Source code"
   },
   "aboutLinkAddon": {
-    "message": "Visa tilläggssidan",
-    "description": "View add-on page"
-  },
-  "aboutRestoreNotificationSuccess": {
-    "message": "Den valda konfigurationsfilen har återställts.",
-    "description": "The selected config has been successfully restored."
+    "message": "Tilläggssida",
+    "description": "Add-on page"
   },
   "aboutRestoreNotificationNoConfigFile": {
     "message": "Den valda filen är inte en giltig Gesturefy-konfigurationsfil.",
@@ -363,9 +311,13 @@
     "message": "Markerad fil matchar inte den önskade filtypen.",
     "description": "The selected file does not match the required file type."
   },
-  "aboutResetNotificationAdditionalPermissions": {
-    "message": "Den här konfigurationsfilen innehåller gester som kan kräva godkännande av ytterligare behörigheter.",
-    "description": "This config file contains gestures that may require the acceptance of additional permissions."
+  "aboutRestoreNotificationConfirm": {
+    "message": "Alla inställningar inklusive rörelser kommer att ersättas med vald konfigurationsfil.",
+    "description": "All settings including gestures will be replaced by the selected config file."
+  },
+  "aboutRestoreNotificationSuccess": {
+    "message": "Den valda konfigurationsfilen har återställts.",
+    "description": "The selected config has been successfully restored."
   },
   "aboutResetNotificationConfirm": {
     "message": "Alla inställningar inklusive rörelser kommer att återställas. Detta går inte att ångra!",
@@ -430,6 +382,10 @@
   "commandLabelToggleMute": {
     "message": "Växla ljudet på/av",
     "description": "Toggle mute"
+  },
+  "commandLabelToggleReaderMode": {
+    "message": "Växla läsläge",
+    "description": "Toggle reader mode"
   },
   "commandLabelScrollTop": {
     "message": "Bläddra till toppen",
@@ -671,6 +627,10 @@
     "message": "Kör användarskript",
     "description": "Execute user script"
   },
+  "commandLabelClearBrowsingData": {
+    "message": "Rensa surfdata",
+    "description": "Clear browsing data"
+  },
   "commandDescriptionToggleBookmark": {
     "message": "Lägger till eller tar bort ett bokmärke.",
     "description": "Adds or removes a bookmark."
@@ -730,6 +690,10 @@
   "commandDescriptionToggleMute": {
     "message": "Inaktiverar eller aktiverar ljudet i aktuell flik.",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "Aktiverar eller inaktiverar läsvyn om tillgänglig.",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "Bläddrar överst på sidan.",
@@ -971,6 +935,10 @@
     "message": "Kör anpassad JavaScript-kod på den aktuella webbsidan.",
     "description": "Executes custom JavaScript code in the current webpage."
   },
+  "commandDescriptionClearBrowsingData": {
+    "message": "Tar bort den angivna surfdatan.",
+    "description": "Removes the specified browsing data."
+  },
   "commandSettingLabelNewTabPosition": {
     "message": "Ny flikposition",
     "description": "New tab position"
@@ -1115,13 +1083,17 @@
     "message": "Fokusera på nytt fönster",
     "description": "Focus new window"
   },
+  "commandSettingLabelUserScriptWarning": {
+    "message": "Försiktigt!",
+    "description": "Careful!"
+  },
   "commandSettingLabelUserScriptCode": {
     "message": "Användarskriptkod",
-    "description": "User Script Code"
+    "description": "User script code"
   },
   "commandSettingLabelTargetFrame": {
     "message": "Målram",
-    "description": "Target Frame"
+    "description": "Target frame"
   },
   "commandSettingLabelTargetFrameSourceFrame": {
     "message": "Källram",
@@ -1134,6 +1106,46 @@
   "commandSettingLabelTargetFrameTopFrame": {
     "message": "Toppram",
     "description": "Top-level frame"
+  },
+  "commandSettingLabelBrowsingDataCache": {
+    "message": "Cache",
+    "description": "Cache"
+  },
+  "commandSettingLabelBrowsingDataCookies": {
+    "message": "Cookies",
+    "description": "Cookies"
+  },
+  "commandSettingLabelBrowsingDataDownloads": {
+    "message": "Nerladdningar",
+    "description": "Downloads"
+  },
+  "commandSettingLabelBrowsingDataFormData": {
+    "message": "Formulärdata",
+    "description": "Form data"
+  },
+  "commandSettingLabelBrowsingDataHistory": {
+    "message": "Historik",
+    "description": "History"
+  },
+  "commandSettingLabelBrowsingDataIndexedDB": {
+    "message": "IndexedDB",
+    "description": "IndexedDB"
+  },
+  "commandSettingLabelBrowsingDataLocalStorage": {
+    "message": "Lokal lagring",
+    "description": "Local Storage"
+  },
+  "commandSettingLabelBrowsingDataPasswords": {
+    "message": "Lösenord",
+    "description": "Passwords"
+  },
+  "commandSettingLabelBrowsingDataPluginData": {
+    "message": "Tilläggsdata",
+    "description": "Plugin data"
+  },
+  "commandSettingLabelBrowsingDataServiceWorkers": {
+    "message": "Tjänstearbetare",
+    "description": "Service Workers"
   },
   "commandSettingDescriptionNewTabPosition": {
     "message": "Bestämmer positionen för den nya fliken i förhållande till den aktuella fliken.",
@@ -1223,9 +1235,13 @@
     "message": "Avgör om fönstret som öppnas ska få fokus eller inte.",
     "description": "Determines if the opened window should gain focus or not."
   },
+  "commandSettingDescriptionUserScriptWarning": {
+    "message": "Användarskript kan leda till förlust av privat data.",
+    "description": "User scripts can lead to the loss of private data."
+  },
   "commandSettingDescriptionUserScriptCode": {
-    "message": "Var försiktig, hela skriptkoden körs i webbsidans omfattning!",
-    "description": "Be careful, the entire script code is executed in the webpage's scope!"
+    "message": "Koden som ska injiceras i webbsidans omfattning.",
+    "description": "The code that should be injected into the webpage's scope."
   },
   "commandSettingDescriptionTargetFrame": {
     "message": "Ramen där användarskriptet ska injiceras.",
@@ -1253,6 +1269,10 @@
     "message": "Det angivna tilläggets-ID:et hör antingen inte till en befintlig tillägget eller tillägget får inte meddelanden. Klicka här för mer information.",
     "description": "The specified extension ID either does not belong to an existing add-on or the add-on does not receive messages. Click here for more information."
   },
+  "commandErrorNotificationMessageMissingIncognitoPermissions": {
+    "message": "Gesturefy har inte behörigheter för inkognitoläge. Tryck här för mer information.",
+    "description": "Gesturefy does not have permission for incognito mode. Click here for more information."
+  },
   "commandBarTitle": {
     "message": "Kommandorad",
     "description": "Command bar"
@@ -1260,10 +1280,6 @@
   "commandBarSearch": {
     "message": "Sök",
     "description": "Search"
-  },
-  "commandBarSaveButton": {
-    "message": "Spara",
-    "description": "Save"
   },
   "commandBarRequiredPermissionsText": {
     "message": "Behörigheter som krävs: ",
@@ -1323,15 +1339,11 @@
     "message": "Tilldela ett anpassat namn som visas i stället för kommandonamnet.",
     "description": "Assign a custom name that will be displayed instead of the command name."
   },
-  "gesturePopupSaveButton": {
-    "message": "Spara",
-    "description": "Save"
-  },
-  "gesturePopupDirectionsNotificationDuplicate": {
-    "message": "Denna rörelse används redan av \"$COMMAND$\".",
-    "description": "This gesture is already in use by \"$COMMAND$\".",
+  "gesturePopupNotificationSimilarGesture": {
+    "message": "Den här rörelsen liknar rörelsen \"$GESTURE_NAME$\".",
+    "description": "This gesture is similar to the \"$GESTURE_NAME$\" gesture.",
     "placeholders": {
-      "command": {
+      "gesture_name": {
         "content": "$1",
         "example": "New Tab"
       }
@@ -1340,6 +1352,10 @@
   "permissionLabelTabs": {
     "message": "Flikar",
     "description": "Tabs"
+  },
+  "permissionLabelSessions": {
+    "message": "Sessioner",
+    "description": "Sessions"
   },
   "permissionLabelBookmarks": {
     "message": "Bokmärken",
@@ -1361,17 +1377,33 @@
     "message": "Sök",
     "description": "Search"
   },
+  "permissionLabelBrowsingData": {
+    "message": "Surfdata",
+    "description": "Browsing data"
+  },
   "toggleButtonOn": {
-    "message": "\\50\\E5",
+    "message": "På",
     "description": "On - setting checked"
   },
   "toggleButtonOff": {
     "message": "Av",
     "description": "Off - setting not checked"
   },
-  "LinkReadWiki": {
-    "message": "Läs wiki för mer information.",
-    "description": "Read wiki for more info."
+  "linkAdditionalInformation": {
+    "message": "Ytterligare information",
+    "description": "Additional information"
+  },
+  "buttonSave": {
+    "message": "Spara",
+    "description": "Save"
+  },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "Avbryt",
+    "description": "Cancel"
   },
   "darkTheme": {
     "message": "Mörkt tema",
